# samples

./: .gitignore  README.md  agentic-patterns.mdx
agent-streaming/: .gitignore  README.md  index.html  package-lock.json  package.json  test.js  tsconfig.json  vite.config.mjs
agent-streaming/public/: index.html  script.js  style.css
agent-streaming/src/: index.js  server.js
agentic-patterns/: .gitignore  README.md  package.json
agentic-patterns/dart/: pubspec.yaml
agentic-patterns/go/: go.mod  go.sum  main.go
agentic-patterns/js/: package-lock.json  tsconfig.json
agentic-patterns/src/: autonomous-operation.ts  genkit.ts  iterative-refinement.ts  parallel-execution.ts  sequential-processing.ts
canvas/: README.md  package-lock.json  package.json
canvas/src/: agent.ts  artifact-manager.ts  genkit.ts  index.ts  tools.ts
canvas/ui/: index.html  package-lock.json  package.json
customer-service-email-responder/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
customer-service-email-responder/src/: config.ts
dynamic-tool-approval/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
eli5/: .gitignore  DOTGUIDES.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
eli5/.gemini/: settings.json
eli5/eli5_flutter/: README.md  pubspec.yaml
eli5/go/: go.sum  main.go
eli5_dart/: .gitignore  README.md  pubspec.yaml  skills-lock.json
eli5_dart/app/: pubspec.yaml
eli5_dart/backend/: pubspec.yaml
eli5_dart/flutter/: pubspec.yaml
eli5_go/: .gitignore  DOTGUIDES.md  README.md  TAILWIND.md  go.mod  go.sum  main.go  package-lock.json  package.json
eli5_go/client/: GEMINI.md  index.html  package-lock.json  (+1 more)
emoji-face/: README.md  package-lock.json  package.json
quickstarts/: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
quickstarts/backend-frameworks/py/django/: README.md  pyproject.toml
quickstarts/backend-frameworks/py/django/myproject/: settings.py  urls.py
quickstarts/backend-frameworks/py/django/recipes/: views.py
quickstarts/backend-frameworks/py/fastapi/: README.md  main.py  pyproject.toml
quickstarts/backend-frameworks/py/flask/: README.md  main.py  pyproject.toml
simple-chatbot/: .gitignore  README.md  package-lock.json  package.json
(+311 files in other folders)
