[project]
name = "quickstart-django"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1",
    "django-cors-headers>=4.6",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "genkit>=0.6.0",
    "genkit-plugin-django>=0.7.0",
    "genkit-plugin-google-genai>=0.6.0",
]
