[project]
name = "quickstart-flask"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "flask[async]>=3.0.0",
    "flask-cors>=5.0.0",
    "pydantic>=2.10.0",
    "genkit",
    "genkit-plugin-google-genai",
    "genkit-plugin-flask",
]

[tool.uv.sources]
genkit = { path = "/Users/chgill/Projects/genkit/py/packages/genkit", editable = true }
genkit-plugin-google-genai = { path = "/Users/chgill/Projects/genkit/py/plugins/google-genai", editable = true }
genkit-plugin-flask = { path = "/Users/chgill/Projects/genkit/py/plugins/flask", editable = true }
